fix: hide overflow content in avatar

--- a/packages/core/styles/components/avatar.css
+++ b/packages/core/styles/components/avatar.css
@@ -16,6 +16,7 @@
   }
 
   & .avatar__photo {
+    overflow: hidden;
     border-radius: 50%;
     height: var(--ifm-avatar-photo-size-md);
     margin-bottom: var(--ifm-avatar-photo-bottom-margin);
